// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|UserList default (empty) 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eLExRp glzeaQ"
  />
</div>
`;

exports[`Storyshots Shared Components|UserList with users 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eLExRp glzeaQ"
  >
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/1"
          onClick={[Function]}
        >
          Alan
           
          Watts
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        />
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      />
    </div>
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/2"
          onClick={[Function]}
        >
          Dale
           
          Chihuly
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        />
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      />
    </div>
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/3"
          onClick={[Function]}
        >
          Dave
           
          Bowie
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </span>
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|UserList with users and actions 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eLExRp glzeaQ"
  >
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/1"
          onClick={[Function]}
        >
          Alan
           
          Watts
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        />
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/2"
          onClick={[Function]}
        >
          Dale
           
          Chihuly
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        />
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-cbkKFq cfpGeN"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="sc-fYiAbW dqzNCO"
      >
        <a
          className="sc-fOKMvo lnkgrV"
          href="/user/3"
          onClick={[Function]}
        >
          Dave
           
          Bowie
        </a>
        <span
          className="sc-dUjcNx lcGoSO"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </span>
      </div>
      <div
        className="sc-krvtoX gXqIUj"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
